--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-align: center
+}
+
 #grid {
+    margin-top: 3%;
     grid-template-columns: repeat(5, 120px);
     display: flex;
     align-items: center;
     justify-items: center;
     justify-content: center;
 }
+
 .card {
     width: 75px;
     height: 100px;
@@ -15,12 +24,15 @@
     text-align: center;
     padding: 1%;
 }
+
 .card-hidden {
     background: #AAA;
 }
+
 .card-visible {
     background: #FFF;
 }
+
 .card-paired {
     background: red;
 }
@@ -30,9 +42,27 @@
 }
 
 h1, h2 {
+    margin-top: 3%;
     text-align: center;
     font-family: sans-serif;
 }
+
 h2 {
     display: none;
+    color: #FFFFFF;
+}
+
+#reload {
+    margin-top: 3%;
+    text-align: center;
+    font-family: sans-serif;
+    opacity: 0;
+}
+
+#resultat {
+    margin-top: 3%;
+    text-align: center;
+    font-family: sans-serif;
+    display: none;
+    color: #FFFFFF;
 }
